app/tools/jelu/jelu-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jelu
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 11111
  selector:
    app: jelu
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
